# fullstack-bench

./: .gitignore  .pdm-python  Justfile  README.md  pyproject.toml  tangle.py
001-todo_app-supabase/: GRADING.md  bun.lockb
001-todo_app-supabase/components/: MessageList.tsx
001-todo_app-supabase/guidelines/: create-migration.md  postgresql-style-guide.md
001-todo_app-supabase/lib/: api.ts
001-todo_app-supabase/supabase/migrations/: 20240131035500_initial_schema.sql
gold/chat_app/convex/: TASK.md
tasks/000-chat_app/: GRADING.md  TASK.md
tasks/000-chat_app/project/: bun.lockb  package-lock.json  package.json  tailwind.config.ts
tasks/000-chat_app/start/: bun.lockb  package-lock.json  package.json
tasks/001-todo_app/: TASK.md
tasks/001-todo_app/project/: GRADING.md  bun.lockb  package-lock.json  package.json  tailwind.config.ts
tasks/002-files_app/: TASK.md
tasks/002-files_app/project/: GRADING.md  bun.lockb  package-lock.json  package.json  testData.ts
templates/convex/: BACKEND.md  package.json  setup.py
templates/convex/app/: layout.tsx  page.tsx
templates/convex/components/: SetupContext.tsx
templates/convex/convex/: schema.ts
templates/convex/lib/: BackendContext.tsx  types.ts
templates/fastapi_redis/: .pdm-python  BACKEND.md  README.md  bun.lockb  package.json  pyproject.toml
templates/fastapi_redis/.cursor/rules/: fastapi.mdc  redis-python.mdc  tanstack-query.mdc
templates/fastapi_redis/lib/: BackendContext.tsx
templates/fastapi_redis/server/: auth.py  db.py  main.py
templates/supabase/: BACKEND.md  bun.lockb  middleware.ts
templates/supabase/app/: layout.tsx  page.tsx
templates/supabase/components/: LoginForm.tsx  LogoutButton.tsx  WithUserEmail.tsx
templates/supabase/lib/: BackendContext.tsx  browserClient.ts  serverClient.ts
(+233 files in other folders)
