[project]
name = "fullstack-bench"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sujay Jayakar", email = "sujayakar@convex.dev"},
]
dependencies = []
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
